2018-03-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-991

	* src/m_cloudradar.cc (iyActiveSingleScat): Added GIN to ignore
	transmission in Jacobian calculations. Saves about 30% in
	calculation time. Also added code to actually include the
	transmission in the Jacobian. Obtain good fit with perturbations
	but there could still be some smaller indexing issues.

2018-03-16  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-990

	Still missing: update to NLTE computations required...

	* controlfiles/artscomponents/linemixing/TestLineMixingAndZeeman_50_to_70_GHz.arts:
	removed unused variable so the test now succeeds.

	* doc/uguide/absorption.tex:  Removed reference to removed 
	variable and slightly updated the text, adding some errata
	that has been pointed out in the Zeeman paper.  This part will
	likely be updated in the future again as an ongoing review
	at Chalmers shows whether the changes give reliable results or 
	not...

2018-03-16  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-989

	* src/sensor.cc (stokes2pol): Old version now completely removed.
	New version gives short and more clear code in calling function.

	* src/sensor.cc (met_mm_polarisation_hmatrix, stokes2pol):
	* src/m_sensor.cc (sensor_responsePolarisation):
	* src/m_transmitter.cc (iy_transmitterMultiplePol)
	(iy_transmitterSinglePol):  Now using the new version of stokes2pol.

	* src/m_cloudradar.cc (iyActiveSingleScat): Another bug for
	particle extinction as aux variable.

2018-03-15  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-988

	* src/m_cloudradar.cc (iyActiveSingleScat): Fixed a bug for iy_aux
	when f_grid had more than element.

	(yActive): Now using new version of stokes_pol. This allowed to
	replace some loops with matrix-vector multiplication.

	* src/sensor.cc (stokes2pol): A new version of this function. This
	version has a proper checking that stokes_dim is sufficient for
	selected polarization.
