@@ -9204,8 +9204,10 @@ void define_md_data_raw()
            "Adds an affine transformation of the last element of\n"
            "*jacobian_quantities*.\n"
            "\n"
-           "For a general description of how retrieval transformations are applied,\n"
-           "see *jacobianSetFuncTransformation*.\n"
+           "See *jacobianSetFuncTransformation* for  a general description of how\n"
+           "retrieval transformations are defined. Transformations are not applied by\n"
+           "methods such as*yCalc*. Instead, the method *jacobianAdjustAndTransform*\n"
+           "must be called to activate the transformations.\n"
            "\n"
            "The affine transformation is specified by a transformation matrix, A,\n"
            "and an offset vector, b. These two are applied as described in\n"
@@ -9243,8 +9245,10 @@ void define_md_data_raw()
            "Sets the functional transformation of the last element of\n"
            "*jacobian_quantities*.\n"
            "\n"
-           "For a general description of how retrieval transformations are\n"
-           "applied, see below.\n"
+           "See below for a general description of how retrieval transformations\n"
+           "are defined. Transformations are not applied by methods such as*yCalc*.\n" 
+           "Instead, the method *jacobianAdjustAndTransform* must be called to\n"
+           "activate the transformations.\n"
            "\n"
            "The following transformations can be selected (by *transformation_func*):\n"
            "   log   : The natural logarithm\n"
@@ -9275,7 +9279,6 @@ void define_md_data_raw()
            "\n"
            "Activating a transformation function is done by this method. Note\n"
            "that the functions are defined as the transformation from z to x.\n"
-           "\n"
            "For more details on affine transformations, see\n"
            "*jacobiaSetAffineTransformation*.\n"
               ),
